# wrs25_arm_control

./: .gitmodules  README.md  tools.repos
src/cam_calibration/: CMakeLists.txt  calibration.yaml  package.xml
src/cam_calibration/action/: BottleCalibration.action
src/cam_calibration/launch/: bringup_camera_nodes.launch.py
src/cam_calibration/scripts/: calibration.py  calibration_v2.py  pose_estimation.py
src/cardboard_gripper_description/: CMakeLists.txt  package.xml
src/cardboard_gripper_description/gripper/: config.json  gripper.urdf.xacro
src/cardboard_gripper_description/gripper/assets/: base.part  base.stl  finger.part  finger.stl
src/cardboard_gripper_description/launch/: start_rviz.launch.py
src/cardboard_gripper_description/rviz/: gripper.rviz
src/robot_description/meshes/: BeakTool.stl  RobotiqCoupler.dae  ToolHolder.stl  bosch_40_40_100.stl  bottle.glb  gripper_adapter.stl  suction_base.stl
src/robot_description/meshes/cobot_station/collision/: BancaleUR_collision.stl
src/robot_description/meshes/suction_gripper/collision/: SuctionCupHolder.stl  suction_gripper.stl
src/robot_description/urdf/: ur5.urdf.xacro  ur5_gripper.urdf  ur5_robotiq85_gripper.xacro
src/robot_description/urdf/robotiq/: robotiq_85_gripper.urdf.xacro
src/wrs25_arm_actions/: CMakeLists.txt  package.xml
src/wrs25_arm_actions/action/: CircMotion.action  GoToJoint.action  GoToPose.action  GripperControl.action  RobotiqGripperControl.action  VisionCheck.action
src/wrs25_arm_actions/launch/: bringup_actions.launch.py  go_to_pose_action.launch.py  robotiq_gripper_action.launch.py  ur_external_control_monitor.launch.py
src/wrs25_arm_actions/scripts/: robotiq_gripper.py  robotiq_gripper_action_client.py  robotiq_gripper_action_server.py  ur_external_control_monitor.py
src/wrs25_arm_actions/src/: circ_motion_action_server.cpp  go_to_joint_action_server.cpp  go_to_pose_action_client.cpp  go_to_pose_action_server.cpp  gripper_control_action_client.cpp  gripper_control_action_server.cpp  robotiq_gripper_action_client.cpp
src/wrs25_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/wrs25_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers_real_robot.yaml  moveit_controllers_simulation.yaml  ompl_planning.yaml  pilz_cartesian_limits copy.yaml  pilz_industrial_motion_planner.yaml  ros2_controllers.yaml  warehouse.yaml  wrs_cell_v2.ros2_control.xacro  wrs_cell_v2.srdf  wrs_cell_v2.urdf.xacro
src/wrs25_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  start_moveit.launch.py  static_virtual_joint_tfs.launch.py  ur_robot_bringup.py  warehouse_db.launch.py
src/wrs25_moveit_config/scripts/: joint_state_merger.py
src/wrs_cell_description/: CMakeLists.txt  package.xml
src/wrs_cell_description/config/: ros2_controllers.yaml
src/wrs_cell_description/launch/: start_moveit.launch.py  start_moveit_simple.launch.py  start_rviz.launch.py  whole_setup_bringup.launch.py
src/wrs_cell_description/meshes/: arms_mount.stl
src/wrs_cell_description/rviz/: rviz.rviz
src/wrs_cell_description/scripts/: gripper_joint_state_publisher.py
src/wrs_cell_description/urdf/: wrs_env.urdf.xacro  wrs_env_V2.urdf.xacro
src/wrs_env_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/wrs_env_v2_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_real_robot.yaml  moveit_controllers_simulation.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner.yaml  planning_pipelines.yaml  ros2_controllers.yaml  wrs_cell_v2.ros2_control.xacro  wrs_cell_v2.srdf  wrs_cell_v2.urdf.xacro
src/wrs_env_v2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
